--- a/style.css
+++ b/style.css
@@ -13,10 +13,43 @@ body {
 header, main, aside, footer {
   padding: 2em;
   border-radius: 2px;
-  margin: 1em;
 }
 
-header { background: #20C997; }
-main { background: #9E84FD; }
-aside { background:  #E1EA87; }
-footer { background: #428CFF; }
+header { 
+  background: #20C997; 
+  grid-area: header;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  justify-content: space-around;
+}
+main { 
+  background: #9E84FD;
+  grid-area: main;
+ }
+aside { 
+  background:  #E1EA87;
+  grid-area: aside; 
+}
+footer { 
+  background: #428CFF;
+  grid-area: footer;
+}
+
+.container {
+  display: grid;
+  height: 100vh;
+  grid-template-areas: 
+  "header header"
+  "main aside"
+  "footer footer" ;
+  grid-template-columns: auto 300px;
+  grid-template-rows: 100px auto 200px;
+  text-align: center;
+  gap: 1em;
+}
+
+.box {
+  display: flex;
+  flex: space-around;
+}
