--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ body {
 header, main, aside, footer {
   padding: 2em;
   border-radius: 2px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 header { 
@@ -47,9 +50,4 @@ footer {
   grid-template-rows: 100px auto 200px;
   text-align: center;
   gap: 1em;
-}
-
-.box {
-  display: flex;
-  flex: space-around;
 }
